improvements suggested by mykel

--- a/book.tex
+++ b/book.tex
@@ -6,7 +6,11 @@
 % biber book
 % lualatex book
 
-\documentclass[fullbook]{book_template}
+\documentclass[fullbook]{tufte_algorithms_book}
+
+\title{Textbook Template}
+\author[LastnameOne and LastnameTwo]{Author A. LastnameOne \\ Author B. LastnameTwo}
+\date{2019}
 
 \begin{document}
 \frontmatter
