--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,7 +1,8 @@
+\makeatletter
 \begin{titlepage}
 {\Huge
 \noindent
-Textbook Template Title Page}
+\@title}
 \end{titlepage}
 
 \cleardoublepage
@@ -10,12 +11,11 @@ Textbook Template Title Page}
 \vfill
 {\Huge
 \noindent
-Textbook Template
+\@title
 }\\[0.5in]
 {\Large
 \noindent
-Mykel J. Kochenderfer\\
-Tim A. Wheeler
+\@author
 }
 \vfill
 {\large
@@ -24,4 +24,5 @@ The MIT Press\\
 Cambridge, Massachusetts\\
 London, England
 }\\[1in]
+\makeatother
 
