--- a/book.tex
+++ b/book.tex
@@ -28,8 +28,7 @@
 \include{chapter/introduction}
 % Add additional include statements for your other chapters.
 \appendix
-\include{chapter/appendix/mathematical-concepts}
-\include{chapter/appendix/julia}
+\include{chapter/appendix}
 \solutions
 \backmatter
 \chapter*{References}
