--- a/dedication.tex
+++ b/dedication.tex
@@ -2,6 +2,6 @@
 ~\\[3in]
 \begin{fullwidth}
 \begin{center}
-\Large \itshape For a better world.
+\Large \itshape Place a dedication here.
 \end{center}
 \end{fullwidth}
