Pagell -> Pagella (typo fix)
In this commit I fix a typo.
And I also take the chance to ask where the font is defined.
I expected a \usepackage{tgpagella} somewhere in cls or tex files.

--- a/copyrightpage.tex
+++ b/copyrightpage.tex
@@ -8,7 +8,7 @@ All rights reserved. No part of this book may be reproduced in any
 form by any electronic or mechanical means (including photocopying,
 recording or information storage and retrieval)
 without permission in writing from the publisher.\\[0.2in]
-This book was set in \TeX\ Gyre Pagell by the authors in \LaTeX.\\
+This book was set in \TeX\ Gyre Pagella by the authors in \LaTeX.\\
 Printed and bound in the United States of America.\\[0.2in]
 Library of Congress Cataloging-in-Publication Data is available.\\[0.2in]
 ISBN: \\[0.2in]
