add comments on custom pythontex.sty

--- a/pythontex.sty
+++ b/pythontex.sty
@@ -1,4 +1,5 @@
-% MODIFIED BY MYKEL KOCHENDERFER
+% MODIFIED BY MYKEL KOCHENDERFER from pythontex v0.17
+% provides custom syntex pygments to existing julia, juliacon and jl environment
 
 %%
 %% This is file `pythontex.sty',
@@ -7,9 +8,9 @@
 %% The original source files were:
 %%
 %% pythontex.dtx  (with options: `package')
-%% 
+%%
 %% This is a generated file.
-%% 
+%%
 %% Copyright (C) 2012-2019 by Geoffrey M. Poore <gpoore@gmail.com>
 %% --------------------------------------------------------------------------
 %% This work may be distributed and/or modified under the
@@ -19,7 +20,7 @@
 %%   http://www.latex-project.org/lppl.txt
 %% and version 1.3 or later is part of all distributions of LaTeX
 %% version 2005/12/01 or later.
-%% 
+%%
 \NeedsTeXFormat{LaTeX2e}[1999/12/01]
 \ProvidesPackage{pythontex}
     [2019/09/22 v0.17 execute and typeset Python code and other languages]
