Update book.bib to fix JMLR

--- a/book.bib
+++ b/book.bib
@@ -32,7 +32,7 @@
 @String { itsc        = {IEEE International Conference on Intelligent Transportation Systems (ITSC)} }
 @String { jair        = {Journal of Artificial Intelligence Research} }
 @String { jgcd        = {AIAA Journal on Guidance, Control, and Dynamics} }
-@String { jmlr        = {Journal of Machine Learning} }
+@String { jmlr        = {Journal of Machine Learning Research} }
 @String { jota        = {Journal of Optimization Theory and Applications} }
 @String { jstor       = {Journal of the American Statistical Association} }
 @String { lion        = {Learning and Intelligent Optimization (LION)} }
